--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,14 @@ section{
 /*social*/
 
 #social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
   
 }
 
